plugins {
    id 'java'
}

allprojects {
    group 'ru.yandex.market'
    version '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }

    compileJava {
        options.encoding = 'UTF-8'
        sourceCompatibility = 17
        targetCompatibility = 17
    }
}

test {
    useJUnitPlatform()
}